[package]
name = "mpm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
num-traits = "0.2.15"
rand = "0.8.5"
png = "0.17.9"
gif = "0.12.0"
# del-geo = {path="../del-geo"}
# del-geo = "0.1.3"